scrollbar fixed

--- a/src/app/archive/archive.css
+++ b/src/app/archive/archive.css
@@ -1,6 +1,6 @@
 .archive {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100%;
   background-color: var(--background);
   color: var(--foreground);
@@ -198,7 +198,7 @@
 
 .next-archive {
   position: relative;
-  width: 100vw;
+  width: 100%;
   overflow-x: hidden;
   gap: 1em;
   background-color: var(--background);
