--- a/src/app/home.css
+++ b/src/app/home.css
@@ -1,6 +1,6 @@
 /* hero section */
 .hero {
-  width: 100vw;
+  width: 100%;
   height: 100svh;
   overflow: hidden;
 }
@@ -303,7 +303,7 @@
 
 /* abstract */
 .abstract-bg {
-  width: 100vw;
+  width: 100%;
   height: max-content;
   background-color: var(--background-light);
 }
@@ -386,7 +386,7 @@
 /* carousel */
 .carousel {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100svh;
   overflow: hidden;
   z-index: 1;
@@ -396,7 +396,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100svh;
   clip-path: polygon(0% 100%, 100% 100%, 100% 100%, 0% 100%);
 }
