--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 section.footer-area {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100svh;
   pointer-events: none !important;
 }
@@ -9,7 +9,7 @@ footer {
   position: fixed;
   left: 0;
   bottom: 0;
-  width: 100vw;
+  width: 100%;
   height: 100svh;
   overflow: hidden;
   background-color: var(--background);
